@@ -3,10 +3,8 @@ AM_CPPFLAGS =	-I$(top_srcdir) \
 				$(ALSA_CFLAGS) \
 				$(X11_CFLAGS) \
 				$(XFT_CFLAGS) \
-				$(LIBGLIB_CFLAGS) \
 				$(CAIRO_CFLAGS) \
 				$(LFSTK_CFLAGS) \
-				$(LIBGLIB_CFLAGS) \
 				-DPREFIX=\""${prefix}\"" \
 				-DDATADIR=\""${pkgdatadir}"\" \
 				-DSYSCONFDIR=\""${sysconfdir}/${PACKAGE}"\" \
@@ -15,10 +13,7 @@ AM_CPPFLAGS =	-I$(top_srcdir) \
 LIBS =			$(X11_LIBS) \
 				$(ALSA_LIBS) \
 				$(XFT_LIBS) \
-				$(LIBGLIB_LIBS) \
 				$(CAIRO_LIBS) \
 				$(LFSTK_LIBS) \
-				$(LIBGLIB_LIBS) \
 				-lm \
 				-lstdc++fs
-
