@@ -23,11 +23,6 @@ PKG_CHECK_MODULES(XFT, $XFT_MODULES)
 AC_SUBST(XFT_CFLAGS)
 AC_SUBST(XFT_LIBS)
 
-LIBGLIB_MODULES="glib-2.0 >= 2.60.0"
-PKG_CHECK_MODULES(LIBGLIB, $LIBGLIB_MODULES)
-AC_SUBST(LIBGLIB_LIBS)
-AC_SUBST(LIBGLIB_CFLAGS)
-
 CAIRO_MODULES="cairo >= 1.12.16"
 PKG_CHECK_MODULES(CAIRO, $CAIRO_MODULES)
 AC_SUBST(CAIRO_LIBS)
