@@ -33,6 +33,10 @@ class LFSTK_UtilityClass
 		static std::string				LFSTK_strReplaceAllStr(std::string haystack,std::string needle,std::string newneedle,bool erase=false);
 		static std::string				LFSTK_strReplaceAllChar(std::string haystack,std::string needle,std::string newneedle,bool erase=false);
 		static unsigned long				LFSTK_hashFromKey(std::string key);
+//desktop files
+		static std::vector<std::string>	LFSTK_readDesktopFile(std::string filepath);
+		static std::string				LFSTK_getEntry(std::string keyname,std::vector<std::string> lines);
+
 };
 
 #endif
