@@ -1,4 +1,5 @@
 0.2.0
+Removed glib GKeyFile calls.
 GUI tweaks.
 Added run prefs for dock to launcher popup menu.
 Code clean.
